--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>자기소개 위키 페이지</title>
+    <title>앵버의 자기소개 위키 페이지</title>
     <link rel="stylesheet" href="./css/main.css" />
-    <script src="./js/index.js"></script>
+    <script defer src="./js/index.js"></script>
   </head>
   <body>
     <div id="app">
@@ -16,54 +16,140 @@
         </h1>
       </header>
       <main>
-        <h2 class="title">크론</h2>
+        <h2 class="title">앵버</h2>
         <hr />
-        <section>
+        <section id="intro">
           <h3 class="subtitle">자기소개</h3>
           <p>
-            안녕하세요, 저는 끊임없이 새로운 도전을 통해 성장하는 것을 즐기는 크론이에요. 안정적인 삶에서 벗어나 세 번의
-            큰 전환점을 겪으며 지금의 제가 되었어요. 어제보다 더 나은 오늘의 나를 만들기 위해 노력하고 있죠. 매일의 작은
-            성취들이 모여 제가 한 걸음 더 성장했다는 것을 느낄 때면 가슴이 벅차오르거든요. 그러다 문득, 저처럼 변화를
-            갈망하며 도전을 꿈꾸는 분들이 많다는 것을 알게 되었어요. 나의 성장도 의미 있지만, 누군가의 성장을 함께할 수
-            있다는 건 매일 새로운 설렘을 주는 일이에요.
+            안녕하세요, 반도체 회사에서 설비 자동화 업무를 몇년간 진행하고 제 최종 목표인 해외 취업을 쫓아 우테코에 들어오게 된 앵버입니다.
+            평소에는 안정적인 것을 선호하는 성격이지만, 비전에 있어서는 새로운 도전을 마다하지 않습니다.
+            '지난 제 자신과 비교하며 성장하는 과정을 즐기자!'' 라는 마인드로 천천히 성장할 계획입니다~
           </p>
         </section>
 
-        <section>
-          <h3 class="subtitle">나를 울린 인생 작품</h3>
+        <section id="photo">
+          <h3 class="subtitle">나만의 갤러리</h3>
           <article>
-            <h4>인생 영화</h4>
+            <h4>기억에 남는 순간들</h4>
             <div class="thumbnail">
               <img
-                src="https://image.tmdb.org/t/p/w1280/u8ffl7CRAS12KA8eQEtkLuHg8Fm.jpg"
+                src="./images/필리핀1.jpeg"
                 width="200"
-                alt="그래비티 영화 포스터"
+                alt="필리핀 여행 사진"
+              />
+              <img
+                src="./images/필리핀2.jpeg"
+                width="200"
+                alt="필리핀 여행 사진"
+              />
+              <img
+                src="./images/도쿄길거리.jpeg"
+                width="200"
+                alt="일본 여행 사진"
+              />
+              <img
+                src="./images/일본음식1.jpeg"
+                width="200"
+                alt="일본 음식 사진"
+              />
+              <img
+                src="./images/일본음식2.jpeg"
+                width="200"
+                alt="일본 음식 사진"
+              />
+              <img
+                src="./images/설악산.jpeg"
+                width="200"
+                alt="설악산 사진"
+              />
+              <img
+                src="./images/전주성당.jpeg"
+                width="200"
+                alt="전주 성당 사진"
+              />
+              <img
+                src="./images/런닝머신.jpeg"
+                width="200"
+                alt="런닝 머신 10km 사진"
+              />
+              <img
+                src="./images/도쿄타워.jpeg"
+                width="200"
+                alt="도쿄 타워 사진"
               />
             </div>
+          </article>
+        </section>
+
+        <section id="favorite">
+          <h3 class="subtitle">나를 울릴 뻔한 인생 작품</h3>
+          <article>
+            <h4>인생 영화, 드라마</h4>
+            <div class="thumbnail">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/ko/2/26/%EB%A7%A4%ED%8A%B8%EB%A6%AD%EC%8A%A4_%ED%8F%AC%EC%8A%A4%ED%84%B0.jpg"
+                width="200"
+                alt="매트릭스 영화 포스터"
+              />
+              <img
+                src="https://t1.daumcdn.net/thumb/R720x0/?fname=http://t1.daumcdn.net/brunch/service/user/5xq2/image/w2gbbJ7lwG0quKMZtTihufPuvno.jpg"
+                width="200"
+                alt="해리포터 영화 포스터"
+              />
+              <img
+                src="https://i.namu.wiki/i/R58_ikTCQ_0Qgz_ZS4BA_4s73gcIhGlhlvMUEQcBbr-r5Z-f-TIGBtR6jkltykOJKBXBSATK6plxDAXSieinzQ.webp"
+                width="200"
+                alt="워킹데드 포스터"
+              />
+              
+            </div>
             <p>
-              알폰소 쿠아론 감독이 연출하고 샌드라 불럭이 주연으로 출연하는 영화 「그래비티」는 우주 정거장에서 임무
-              수행 중 고립된 한 우주인의 생존과 귀환을 그린 작품이다. 대학생 시절 처음 본 이 영화는 당시엔 그저 지루한
-              우주 영화였다. 그런데 이 영화를 다시 보니, 마치 내 미래를 미리 보여준 복선과도 같다는 점을 깨달았다.
+              액션, SF 장르를 좋아해서 좋아하는 작품이 생기면 여러 번 보는 경우가 꽤 있다. 
+              위 세 작품 모두 여러 번 시청한 작품들로 평소에 경험할 일이 없는 것들이 소재가 되기 때문에 흥미롭고 재밌게 보는 것 같다. 
             </p>
           </article>
         </section>
 
-        <section>
+        <section id="book">
+          <article>
+            <h4>책 추천</h4>
+            <div class="thumbnail">
+              <img
+                src="https://velog.velcdn.com/images/aydenote/post/6384926a-c12a-41cb-8bab-ca907182a99b/image.PNG"
+                width="200"
+                alt="책 표지"
+              />
+            </div>
+            <p>
+              평소에 생각이 많고 감정 컨트롤이 부족한 나에게 적합한 책이라고 생각해 "어른스럽게 감정을 컨트롤하는 사람"이 되었으면 하는 바람에서 독서 리스트에 추가해 읽었다.
+              이 책의 전반적인 느낌은 친하게 지내던 형에게 "너 잘 못 아니다.", "힘내라" 같은 말을 듣는 느낌이다.
+              주제마다 작은 소주제가 있고 소주제는 한두 페이지로 이루어져 있는데, 나는 한 소주제를 읽을 때마다 살짝 울컥하는 감정이 오곤 해 "나도 모르게 마음에 상처가 조금 있었나?", "나도 모르게 누군가에게 위로받고 싶었나?" 이런 생각이 들었었다.
+              이 책 한 권으로 감정 컨트롤을 잘할 수 없겠지만, "어른스럽게 감정을 컨트롤하는 사람"에는 한 발짝 앞으로 다가간 느낌이다.
+            </p>
+          </article>
+        </section>
+               
+        <section id="comment">
           <div class="comment-writing-container">
             <form>
               <fieldset>
-                <legend>댓글 쓰기</legend>
-                <textarea
-                  placeholder="정말 멋진 글이네요. 크루가 감동할 수 있도록 훈훈해지는 댓글 부탁 드립니다."
-                ></textarea>
+                <div class="input_container">
+                  <img src="./images/comment-author-icon.png" alt="댓글 등록 이미지" width="24" height="24">
+                  <input type="text" class="input_comment" placeholder="정말 멋진 글이네요. 크루가 감동할 수 있도록 훈훈해지는 댓글 부탁 드립니다.">
+                  <div class="button_wrap">
+                    <button type="reset" class="cancel_button">취소</button>
+                    <button type="button" class="add_button">등록</button>
+                  <div>
+                </div>
               </fieldset>
             </form>
           </div>
+
           <ul class="comment-list">
             <li>
               <div class="comment-item">
                 <div class="comment-author">
-                  <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
+                  <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" width="24" height="24">
                   <span>방문자</span>
                 </div>
                 <div class="comment-content">
@@ -77,7 +163,7 @@
             <li>
               <div class="comment-item">
                 <div class="comment-author">
-                  <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
+                  <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" width="24" height="24">
                   <span>방문자</span>
                 </div>
                 <div class="comment-content">
@@ -90,7 +176,7 @@
             <li>
               <div class="comment-item">
                 <div class="comment-author">
-                  <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" />
+                  <img src="./images/comment-author-icon.png" alt="사용자 프로필 이미지" width="24" height="24">
                   <span>방문자</span>
                 </div>
                 <div class="comment-content">
@@ -114,16 +200,19 @@
           <h2>Contents</h2>
           <ol class="contents">
             <li>
-              <a href="#">자기소개</a>
+              <a href="#intro">자기소개</a>
             </li>
             <li>
-              <a href="#">나만의 갤러리</a>
+              <a href="#photo">나만의 갤러리</a>
             </li>
             <li>
-              <a href="#">나를 울린 인생 작품</a>
+              <a href="#favorite">나를 울린 인생 작품</a>
             </li>
             <li>
-              <a href="#">감상평</a>
+              <a href="#book">책 추천</a>
+            </li>
+            <li>
+              <a href="#comment">댓글</a>
             </li>
           </ol>
         </nav>
