fix: 이미지 이름 영문으로 수정

--- a/index.html
+++ b/index.html
@@ -33,47 +33,47 @@
             <h4>기억에 남는 순간들</h4>
             <div class="thumbnail">
               <img
-                src="./images/필리핀1.jpeg"
+                src="./images/pilipinas1.jpeg"
                 width="200"
                 alt="필리핀 여행 사진"
               />
               <img
-                src="./images/필리핀2.jpeg"
+                src="./images/pilipinas2.jpeg"
                 width="200"
                 alt="필리핀 여행 사진"
               />
               <img
-                src="./images/도쿄길거리.jpeg"
+                src="./images/tokyo1.jpeg"
                 width="200"
                 alt="일본 여행 사진"
               />
               <img
-                src="./images/일본음식1.jpeg"
+                src="./images/japanFood1.jpeg"
                 width="200"
                 alt="일본 음식 사진"
               />
               <img
-                src="./images/일본음식2.jpeg"
+                src="./images/japanFood2.jpeg"
                 width="200"
                 alt="일본 음식 사진"
               />
               <img
-                src="./images/설악산.jpeg"
+                src="./images/seoraksan.jpeg"
                 width="200"
                 alt="설악산 사진"
               />
               <img
-                src="./images/전주성당.jpeg"
+                src="./images/jeonju.jpeg"
                 width="200"
                 alt="전주 성당 사진"
               />
               <img
-                src="./images/런닝머신.jpeg"
+                src="./images/runnigMachine.jpeg"
                 width="200"
                 alt="런닝 머신 10km 사진"
               />
               <img
-                src="./images/도쿄타워.jpeg"
+                src="./images/tokyo2.jpeg"
                 width="200"
                 alt="도쿄 타워 사진"
               />
