style: 책 소개 이미지 가운데 정렬

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section id="book">
           <article>
             <h4>책 추천</h4>
-            <div class="thumbnail">
+            <div class="thumbnail book">
               <img
                 src="https://velog.velcdn.com/images/aydenote/post/6384926a-c12a-41cb-8bab-ca907182a99b/image.PNG"
                 width="200"
